# SteamGameServerLauncher

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Readme.md  TODO.md
.agents/: AGENTS.md
.antigravity/: GEMINI.md
.github/workflows/: build-and-release.yml
Plan/Done/Cleanup/: RemoveEmojis.md
Plan/Done/Feature/: IcarusMapExportImport.md  IcarusUpdateCheckImpl.md
Plan/Done/Research/: IcarusUpdateCheck.md
Plan/Now/Feature/1.3.0-NSIS-Installer/: plan.md
installer/: sgsl_installer.nsi
installer/licenses/: Data_Collection_en.md  Data_Collection_zh.md  EULA_en.md  EULA_zh.md  QT_License_en.md  QT_License_zh.md
src/: main.cpp  version.h
src/Core/: GithubUpdater.cpp  GithubUpdater.h  MapPackager.cpp  MapPackager.h  ServerManager.cpp  ServerManager.h  SteamCmdManager.cpp  SteamCmdManager.h
src/UI/: MainWindow.cpp  MainWindow.h
updater/: main.cpp  miniz_export.h
